[tool.poetry]
name = "mro"
version = "0.1.0"
description = ""
authors = ["Neeraj319 <itskop520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
